generated/checker-for-evaluation/generated/test-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/9/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:107:38: error: ‘MapTy’ is not a member of ‘clang::ento::ProgramStateTrait<{anonymous}::ReqStatusMap>’
  107 |     ProgramStateTrait<ReqStatusMap>::MapTy Map = State->get<ReqStatusMap>();
      |                                      ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:109:19: error: ‘Map’ was not declared in this scope
  109 |     for (auto I = Map.begin(), E = Map.end(); I != E; ++I) {
      |                   ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:109:52: error: ‘E’ was not declared in this scope
  109 |     for (auto I = Map.begin(), E = Map.end(); I != E; ++I) {
      |                                                    ^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
